--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     font-family: arial;
     border: border-box;
 }
-
 .navbar {
     height:60px;
     background-color: #0f1111;
@@ -12,20 +11,17 @@
     align-items:center;
     justify-content: space-evenly;
 }
-
 .nav-logo{
     height: 50px;
     width: 100px;
     background-size:cover;
 }
-
 .logo{
      height: 50px;
     width: 100px;
     background-image: url("./images/amazon_logo.png");
     background-size: cover;
 }
-
 .border{
     border:1.5px solid transparent;
 }
@@ -33,27 +29,21 @@
 .border:hover{
     border: 1.5px solid white;
 }
-
 /* box-2 */
     .add-first{
         color: #cccccc;
         font-size:0.85rem;
         margin-left:15px;
-
-
     }
-
     .add-second{
         color:#ffffff;
         font-size:1rem;
         margin-left:3px;
     }
-
     .add-icon{
         display:flex;
         align-items: center;
     }
-
     /* box-3 */
     .nav-search{
         display: flex;
@@ -63,7 +53,6 @@
         height: 40px;
         border-radius: 4px;
     }
-
     .search-select{
         background-color: #f3f3f3;
         width: 50px;
@@ -72,13 +61,11 @@
         border-bottom-left-radius: 4px;
         border: none;
     }
-
     .search-input{
         width: 100%;
         font-size: 1rem;
         border: none;
     }
-
     .search-icon{
         width: 45px;
         display: flex;
@@ -86,56 +73,101 @@
         align-items: center;
         font-size: 1.2rem;
         background-color:#febd68;
-
     }
     .nav-search:hover{
         border: 2px solid orange;
-
+    }
+    /* box-4 */
+    span{
+        font-size: 0.7rem;
+    }
+    .nav-second{
+         font-size: 0.8rem;
+        font-weight: 700;
+    }
+     /* box-6 */
+    .nav-cart i{
+        font-size: 30px ;
+     }
+    .nav-cart {
+         font-size: 0.85rem;
+         font-weight: 700;
     }
 
-    /* box-4 */
-        span{
-        font-size: 0.7rem;
-        }
+     /* panel */
+    .panel{
+        height: 50px;
+        background-color:#222f3d ;
+        display: flex;
+        color: white;
+        align-items: center;
+        justify-content: space-evenly;
+     }
+    .panel-ops p{
+        display: inline;
+        margin: 15px;
+    }
+    .panel-ops{
+        width: 70%;
+        font-size: 0.85rem;
+     }
+    .panel-deals{
+        font-size: 0.9rem;
+        font-weight: 700;
+    }
 
-        .nav-second{
-            font-size: 0.8rem;
-            font-weight: 700;
+    /* hero section */
+    .hero-section{
+        background-image:url(./images/hero_image.jpg);
+        height: 350px;
+        background-size: cover;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
 
-        }
-        /* box-6 */
-        .nav-cart i{
-            font-size: 30px ;
+    .hero-msg{
+        background-color: white;
+        color: black;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 0.85rem;
+        bottom: 25px;
+        width: 80;
+        margin-bottom: 25px;
+    }
+    .hero-msg a{
+         color: #007185;
+    }
+    /* shop section */
+    .shop-section{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        background-color: #e2e7e6;
+    }
+    .box{
+        height: 400px;
+        width: 23%;
+            /* border: 2px solid black; */
+        background-color: white;
+        padding: 20px 0px 15px;
+        margin-top: 15px;
+    }
+    .box-img{
+        height: 300px;
+        background-size: cover;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+    .box-content{
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+    .box-content p{
+        color:#007185; 
+    }
 
-        }
-        .nav-cart {
-            font-size: 0.85rem;
-            font-weight: 700;
-
-        }
-
-        /* panel */
-        .panel{
-            height: 50px;
-            background-color:#222f3d ;
-            display: flex;
-            color: white;
-            align-items: center;
-            justify-content: space-evenly;
-
-        }
-        .panel-ops p{
-            display: inline;
-            margin: 15px;
-
-        }
-
-         .panel-ops{
-            width: 70%;
-            font-size: 0.85rem;
-         }
-
-         .panel-deals{
-            font-size: 0.9rem;
-            font-weight: 700;
-         }
+         
