--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     background-size:cover;
 }
 .logo{
-     height: 50px;
+    height: 50px;
     width: 100px;
     background-image: url("./images/amazon_logo.png");
     background-size: cover;
@@ -168,6 +168,67 @@
     }
     .box-content p{
         color:#007185; 
+    }
+    /* Footer */
+    footer{
+        margin-top: 15px;
+                
+    }
+    .foot-panel1{
+        background-color: #37475a;
+        color: white;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.85rem;
+    }
+    .foot-panel2{
+        background-color: #222f3d;
+        color: white;
+        height: 300px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    ul{
+        margin: 20px;   
+    }
+    ul a{
+        display: block;
+        font-size: 0.85rem;
+        margin-top: 10px;
+        color: #dddddd;
+    }
+    .foot-panel3{
+        background-color: #222f3d;
+        color:white;
+        border-top: 0.5px solid white;
+        height: 70px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .logo{
+        height: 50px;
+        background-image: url("./images/amazon_logo.png");
+        background-size: cover;
+        width: 100px;
+    }
+    .foot-panel4{
+        background-color: #0f1111;
+        color: white;
+        height:80px;
+        font-size: 0.75rem;
+         text-align: center;
+        /* display: flex;
+        align-items: center;
+        justify-content: center; */
+    }
+    .pages{
+        font-size: 0.75rem;
+    }
+    .copyright{
+        padding-top: 5px;  
     }
 
          
